# parsercom

./: .gitignore  .travis.yml  LICENSE.txt  Makefile  README.md  environment.yml  pyproject.toml  setup.py
docs/: docs.md  notes.md
parsercom/: A.py  char_parser.py  combinator.py  common.py  galaxy_brain.py  parser.py  string_parser.py  xml.py
test/: test_a.py  test_char_parser.py  test_combinator.py  test_combo.py  test_galaxy_brain.py  test_parser.py  test_string_parser.py  test_xml.py
xml/: parse_test.py
