[tool.poetry]
name = "parsercom"
version = "0.1.0"
description = ""
authors = ["Stefan Wong <stfnwong@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
ipython = "^7.25.0"
pudb = "^2021.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
